# event-rate

./: README.md  docker-compose.yml  dotenv-db-example
.github/workflows/: ci.yml
haproxy/: haproxy.cfg
line-provider/: pyproject.toml
score-maker/: pyproject.toml
src/line-provider/: Dockerfile  docker-compose.yml  dotenv-example  entrypoint.sh  pyproject.toml
src/line-provider/app/: config.py  main.py
src/line-provider/app/api/: models.py
src/line-provider/app/api/endpoints/: api_router.py  events.py
src/line-provider/app/api/schemas/: requests.py  responses.py
src/line-provider/app/core/: database.py  kafka_consumer.py
src/score-maker/: Dockerfile  docker-compose.yml  dotenv-example  entrypoint.sh  pyproject.toml
src/score-maker/app/app/: settings.py
src/score-maker/config/: settings.py  urls.py
src/score-maker/config/config/: settings.py
src/score-maker/scores/: admin.py  models.py  monitoring.py  serializers.py  services.py  urls.py  views.py
src/score-maker/scores/migrations/: 0001_initial.py
