[tool.poetry]
name = "score-maker"
version = "0.1.0"
description = "Rating events by users"
authors = ["Nikita Pisarev <>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
djangorestframework = "^3.15.2"
aiokafka = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
